--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 
+/* || RESET */
+
 *{
   margin: 0;
   padding: 0;
@@ -8,9 +10,9 @@
 
 
 body{
-  font-size: 1rem;
-  font-family: 'Noto Sans', sans-serif;
-  width: 100%;
+  font-size: 0.8rem;
+  font-family: 'Nunito', sans-serif;
+  min-width: 100%;
   min-height: 100vh;
 }
 
@@ -35,6 +37,7 @@ h1{
 .Header{
   background-color:#8B8BAE;
 }
+
 
 .container{
   width: 100%;
